# bzdownloader

./: .gitignore  README.md  pyproject.toml
bzdownloader/: bzdownloader.py
tests/: test_bzdownloader.py
